[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/icons/Pause_Pressed.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Pause_Original.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Pause_Hoover.png" type="Texture" id=4]
[ext_resource path="res://hud/GameElements.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0.117647, 0.670588, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 0, 0.580392, 0.486275, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_color = Color( 1, 0.501961, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 10
border_blend = true

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="PlayerHUDMainPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 125 )
custom_styles/panel = SubResource( 1 )

[node name="PlayerHUDMainContainer" type="HBoxContainer" parent="PlayerHUDMainPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1917.0
margin_bottom = 118.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 300
alignment = 1

[node name="PlayerHUDLeftContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 84.0
margin_right = 244.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Separation1" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 2.0
margin_right = 160.0
margin_bottom = 2.0
rect_min_size = Vector2( 160, 0 )

[node name="ScoreElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 22.0
margin_right = 160.0
margin_bottom = 47.0
custom_constants/separation = 5

[node name="ScoreLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/ScoreElementsContainer"]
margin_right = 84.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "SCORE:"

[node name="ScoreLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/ScoreElementsContainer"]
margin_left = 89.0
margin_right = 159.0
margin_bottom = 25.0
rect_min_size = Vector2( 70, 0 )
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1

[node name="LivesElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 67.0
margin_right = 160.0
margin_bottom = 92.0
custom_constants/separation = 5

[node name="LivesLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/LivesElementsContainer"]
margin_right = 74.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "LIVES:"

[node name="LivesLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer/LivesElementsContainer"]
margin_left = 79.0
margin_right = 93.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Separation2" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDLeftContainer"]
margin_top = 112.0
margin_right = 160.0
margin_bottom = 112.0

[node name="PlayerHUDCenterContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 544.0
margin_right = 804.0
margin_bottom = 115.0
alignment = 1

[node name="Separation5" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer"]
margin_top = 5.0
margin_right = 260.0
margin_bottom = 5.0
rect_min_size = Vector2( 260, 0 )

[node name="PlayerHUDCenterPanel" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer"]
margin_top = 9.0
margin_right = 260.0
margin_bottom = 109.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 150, 100 )
size_flags_vertical = 0
custom_styles/panel = SubResource( 3 )

[node name="TimerElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 257.0
margin_bottom = 90.0
custom_constants/separation = 5

[node name="TimerLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel/TimerElementsContainer"]
margin_top = 31.0
margin_right = 80.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "TIMER:"
valign = 1

[node name="TimerLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDCenterContainer/PlayerHUDCenterPanel/TimerElementsContainer"]
margin_left = 85.0
margin_top = 31.0
margin_right = 99.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "0"
valign = 1

[node name="PlayerHUDRightContainer" type="VBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 1104.0
margin_right = 1374.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 2
custom_constants/separation = 20
alignment = 1

[node name="Separation3" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 8.0
margin_right = 270.0
margin_bottom = 8.0
rect_min_size = Vector2( 270, 0 )

[node name="AmmoElementsPanel" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 28.0
margin_right = 270.0
margin_bottom = 86.0
custom_styles/panel = SubResource( 7 )

[node name="AmmoElementsContainer" type="HBoxContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 267.0
margin_bottom = 48.0
custom_constants/separation = 5

[node name="Separation8" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )

[node name="AmmoLabelText" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_left = 5.0
margin_top = 10.0
margin_right = 83.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "AMMO:"

[node name="AmmoLabelNumber" type="Label" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer/AmmoElementsPanel/AmmoElementsContainer"]
margin_left = 88.0
margin_top = 10.0
margin_right = 102.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Separation4" type="Control" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PlayerHUDRightContainer"]
margin_top = 106.0
margin_right = 270.0
margin_bottom = 106.0

[node name="PanelHUDButtonContainer" type="PanelContainer" parent="PlayerHUDMainPanel/PlayerHUDMainContainer"]
margin_left = 1674.0
margin_right = 1830.0
margin_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 6 )

[node name="PauseButton" type="TextureButton" parent="PlayerHUDMainPanel/PlayerHUDMainContainer/PanelHUDButtonContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 153.0
margin_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 150, 100 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PlayerHUDCenterPanel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 7.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 4 )

[node name="PlayerHUDCenterContainer" type="VBoxContainer" parent="PlayerHUDCenterPanel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 703.0
margin_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10

[node name="Separation6" type="Control" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_right = 700.0
rect_min_size = Vector2( 700, 0 )

[node name="PlayerMessage" type="Label" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 10.0
margin_right = 700.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 5 )
text = "USER_MESSAGE_LEVEL"
align = 1
valign = 1

[node name="Separation7" type="Control" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 51.0
margin_right = 700.0
margin_bottom = 71.0
rect_min_size = Vector2( 700, 20 )

[node name="StartButton" type="Button" parent="PlayerHUDCenterPanel/PlayerHUDCenterContainer"]
margin_top = 81.0
margin_right = 700.0
margin_bottom = 131.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 5 )
text = "START"

[connection signal="pressed" from="PlayerHUDMainPanel/PlayerHUDMainContainer/PanelHUDButtonContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PlayerHUDCenterPanel/PlayerHUDCenterContainer/StartButton" to="." method="_on_StartButton_pressed"]
